Try overflow fix for mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,6 +105,10 @@ body,
   overflow: visible;
 }
 
+header {
+  overflow: visible;
+}
+
 .google-login-wrapper {
   margin-left: auto;
   margin-right: 2%;
